--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                 <div class="first-row">
                     <img src="Image1.jpg">
                     <img src="image2.jpg">
-                    <img src="image3.jpg">
+                    <img src="Image3.jpg">
                 </div>
                 <div class="second-row">
-                    <img src="image4.jpg">
-                    <img src="image5.jpg">
-                    <img src="image6.jpg">
+                    <img src="Image4.jpg">
+                    <img src="Image5.jpg">
+                    <img src="Image6.jpg">
                 </div>
             </div>
         </div>
