--- a/index.html
+++ b/index.html
@@ -41,20 +41,12 @@
     </section>
 
     <section id="gallery">
-        <div class="gallery">
-            <h1>Gallery: Food Cooked By Him And His Photos</h1>
-            <div class="images">
-                <div class="first-row">
-                    <img src="Image1.jpg">
-                    <img src="image2.jpg">
-                    <img src="Image3.jpg">
-                </div>
-                <div class="second-row">
-                    <img src="Image4.jpg">
-                    <img src="Image5.jpg">
-                    <img src="Image6.jpg">
-                </div>
-            </div>
+        <h1>Gallery: Food Cooked By Him And His Photos</h1>
+        <div class="images">
+            <img class="img1" src="Image1.jpg">
+            <img class="img2" src="image2.jpg">
+            <img class="img3" src="Image4.jpg">
+            <img class="img4" src="Image3.jpg">
         </div>
     </section>
     <script src="index.js">
