--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section id="about" class="about">
         <h1>About My Father</h1>
         <div class="row-reverse">
-            <img src="Image11.jpg" alt="image">
+            <img src="Image11.webp" loading="lazy" alt="image">
             <div class="col">
                 <h1>Early Life</h1>
                 <p> My father is a man of resilience and determination. Through hard work, he built a successful life
@@ -39,7 +39,7 @@
             </div>
         </div>
         <div class="row">
-            <img src="Image13.jpg" alt="image">
+            <img src="Image13.webp" loading="lazy" alt="image">
             <div class="col">
                 <h1>Career</h1>
                 <p> My father pursued excellence in hotel management, earning multiple degrees and certifications. His
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="row-reverse">
-            <img src="Image14.jpg" alt="image">
+            <img src="Image14.webp" loading="lazy" alt="image">
             <div class="col">
                 <h1>Achievement</h1>
                 <p>From working in a local hotel to excelling in a prestigious five-star hotel, his talent and
@@ -68,4 +68,5 @@
     <script src="index.js">
     </script>
 </body>
+
 </html>
